2003-03-07  Koji SHIMIZU  <shimizu@netlab.jp>

	Added libmondai.m4 to define `AM_PATH_LIBMONDAI'.
	
	* libmondai.m4: New file for `AM_PATH_LIBMONDAI'.
	* configure.in (AC_OUTPUT): Added `src/libmondai.h'.
	* Makefile.am (install-data-local): New tag to install `libmondai.m4'.
	* src/libmondai.h.in: New file to generate `libmondai.h'.
	* src/libmondai.h: Removed file.

	* .cvsignore:
	* docs/.cvsignore:
	* src/.cvsignore: New file for cvs.

	* stamp-h.in: Removed file.
	
	* libmondai-config.in: Outputed GLib and libfixed flags.

	* src/Makefile.am (libmondaiinclude_HEADERS)
	(libmondai_la_SOURCES): Added `types.h'.

	* src/LBSfunc.h: Included `types.h'.
	* src/value.h: Included `types.h', `stdio.h'.

	* libmondai-config.in: Bug fix in `--version'.
	* configure.in (LIBMONDAI_MAJOR_VERSION): Renamed from `MAJOR_VERSION'.
	(LIBMONDAI_MINOR_VERSION): Renamed from `MINOR_VERSION'.
	(LIBMONDAI_MICRO_VERSION): Renamed from `MICRO_VERSION'.
	(LIBMONDAI_VERSION): Renamed from `VERSION'.

2003-02-27  Masami Ogoshi  <ogochan@nurs.or.jp>

	* branch from panda
