@@ -1,22 +1,8 @@
 .deps
 .libs
-DDlex.lo
-DDparser.lo
-LBSfunc.lo
 Makefile
 Makefile.in
-OpenCOBOL.lo
-SQLlex.lo
-SQLparser.lo
-cobolvalue.lo
-comm.lo
-comms.lo
-dotCOBOL.lo
 libmondai.la
-misc.lo
-option.lo
-pty.lo
-queue.lo
-tcp.lo
-value.lo
-valueconv.lo
+*.la
+*.lo
+libmondai.h
